@@ -59,6 +59,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1625" tool="jira">
+                    <description>
+                        Added checks to DateTimeBase.setCentury() for (invalid) years = 0.
+                    </description>
+                    <contributor>
+                        <name>Rainer Montag</name>
+                        <email>rmontag@hrzpub.tu-darmstadt.de</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Rainer Montag</name>
+                        <email>rmontag@hrzpub.tu-darmstadt.de</email>
+                    </reporter>
+                    <type>BUg</type>
+                    <module>XML</module>
+                    <date>20061016</date>
+                </bug>
                 <bug id="385" tool="jira">
                     <description>
                         Source Generator uses the name "Content" which conflicts
